deploy/app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-monitoring-app
  name: spring-monitoring-app
spec:
  selector:
    app: spring-monitoring-app
  ports:
    - name: http
      port: 8443
      protocol: TCP
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-monitoring-app
  name: spring-monitoring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-monitoring-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: spring-monitoring-app
    spec:      
      containers:
      - name: spring-monitoring-app
        image: "kahootali/springjavamonitoringapp:pr-1-31f4a036"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /store-keys
          name: store
      volumes:
      - name: store
        secret:
          secretName: store
      serviceAccountName: spring-monitoring-app
---
